--- a/bin/roulette/header.html
+++ b/bin/roulette/header.html
@@ -20,4 +20,16 @@
         <g id="XMLID_45_">
             <circle id="XMLID_46_" class="st0" cx="306" cy="396" r="228"/>
         </g>
-        <g id="WHEEL_CONTAINER">
+		
+		<defs>
+		<filter id="Adobe_OpacityMaskFilter" filterUnits="userSpaceOnUse" x="-15.5" y="76.4" width="643.1" height="641.1">
+			<feColorMatrix  type="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 1 0"/>
+		</filter>
+		</defs>
+		<mask maskUnits="userSpaceOnUse" x="-15.5" y="76.4" width="643.1" height="641.1" id="XMLID_50_">
+			<g class="st2">
+				<circle id="XMLID_48_" class="st0" cx="306" cy="396" r="228"/>
+			</g>
+		</mask>
+		
+        <g id="WHEEL_CONTAINER" class="st3">
