--- a/bin/roulette/header.html
+++ b/bin/roulette/header.html
@@ -1,10 +1,16 @@
         <svg version="1.1" id="Layer_1"
             viewBox="150 150 612 792" height="800" width="800">
         <style type="text/css">
+            @font-face {
+            font-family: ImpressBT-Regular;
+            src: url(ImpressBT.ttf);
+            }
             .st0{fill:#FFFFFF;}
             .st1{fill:none;stroke:#000000;stroke-miterlimit:10;}
             .st2{filter:url(#Adobe_OpacityMaskFilter);}
             .st3{mask:url(#XMLID_50_);}
+            .st4{font-family:'ImpressBT-Regular';}
+            .st5{font-size:16px;}
             .track1{fill:#CA8DEC;stroke:#000000;stroke-miterlimit:10;}
             .track2{fill:#EAF35C;stroke:#000000;stroke-miterlimit:10;}
             .track3{fill:#45B746;stroke:#000000;stroke-miterlimit:10;}
@@ -12,6 +18,7 @@
             .track5{fill:#F38746;stroke:#000000;stroke-miterlimit:10;}
             .track6{fill:#EE40BC;stroke:#000000;stroke-miterlimit:10;}
             .track7{fill:#43E5F0;stroke:#000000;stroke-miterlimit:10;}
+            .track8{fill:#0088E2;stroke:#000000;stroke-miterlimit:10;}
         </style>
 
         <g>
