--- a/bin/roulette/wheel.html
+++ b/bin/roulette/wheel.html
@@ -1,12 +1,18 @@
 <html>
-	<body onLoad="pick(7,1,15.000000,0)" style="background-color:#FF0000;">
+	<body onLoad="pick(4,6,11.250000,0)" style="background-color:#FF0000;">
         <svg version="1.1" id="Layer_1"
             viewBox="150 150 612 792" height="800" width="800">
         <style type="text/css">
+            @font-face {
+            font-family: ImpressBT-Regular;
+            src: url(ImpressBT.ttf);
+            }
             .st0{fill:#FFFFFF;}
             .st1{fill:none;stroke:#000000;stroke-miterlimit:10;}
             .st2{filter:url(#Adobe_OpacityMaskFilter);}
             .st3{mask:url(#XMLID_50_);}
+            .st4{font-family:'ImpressBT-Regular';}
+            .st5{font-size:16px;}
             .track1{fill:#CA8DEC;stroke:#000000;stroke-miterlimit:10;}
             .track2{fill:#EAF35C;stroke:#000000;stroke-miterlimit:10;}
             .track3{fill:#45B746;stroke:#000000;stroke-miterlimit:10;}
@@ -14,6 +20,7 @@
             .track5{fill:#F38746;stroke:#000000;stroke-miterlimit:10;}
             .track6{fill:#EE40BC;stroke:#000000;stroke-miterlimit:10;}
             .track7{fill:#43E5F0;stroke:#000000;stroke-miterlimit:10;}
+            .track8{fill:#0088E2;stroke:#000000;stroke-miterlimit:10;}
         </style>
 
         <g>
@@ -35,148 +42,193 @@
 		</mask>
 		
         <g id="WHEEL_CONTAINER" class="st3">
-			<g id="3,2"transform="rotate(15.000000,306,396)">
-				<polygon id="XMLID_5_" class="track3" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,2.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="7,6"transform="rotate(11.250000,306,396)">
+				<polygon id="XMLID_5_" class="track7" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/7,6.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="3,4"transform="rotate(30.000000,306,396)">
-				<polygon id="XMLID_6_" class="track3" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,4.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="5,3"transform="rotate(22.500000,306,396)">
+				<polygon id="XMLID_6_" class="track5" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/5,3.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="3,6"transform="rotate(45.000000,306,396)">
-				<polygon id="XMLID_7_" class="track3" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,6.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="4,4"transform="rotate(33.750000,306,396)">
+				<polygon id="XMLID_7_" class="track4" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/4,4.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="6,4"transform="rotate(60.000000,306,396)">
-				<polygon id="XMLID_8_" class="track6" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/6,4.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="6,1"transform="rotate(45.000000,306,396)">
+				<polygon id="XMLID_8_" class="track6" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/6,1.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="4,5"transform="rotate(75.000000,306,396)">
-				<polygon id="XMLID_9_" class="track4" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/4,5.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="5,5"transform="rotate(56.250000,306,396)">
+				<polygon id="XMLID_9_" class="track5" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/5,5.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="5,5"transform="rotate(90.000000,306,396)">
-				<polygon id="XMLID_10_" class="track5" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/5,5.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="3,1"transform="rotate(67.500000,306,396)">
+				<polygon id="XMLID_10_" class="track3" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,1.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="5,4"transform="rotate(105.000000,306,396)">
-				<polygon id="XMLID_11_" class="track5" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/5,4.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="3,3"transform="rotate(78.750000,306,396)">
+				<polygon id="XMLID_11_" class="track3" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,3.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="5,2"transform="rotate(120.000000,306,396)">
-				<polygon id="XMLID_12_" class="track5" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/5,2.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="5,6"transform="rotate(90.000000,306,396)">
+				<polygon id="XMLID_12_" class="track5" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/5,6.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="6,2"transform="rotate(135.000000,306,396)">
-				<polygon id="XMLID_13_" class="track6" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/6,2.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="6,5"transform="rotate(101.250000,306,396)">
+				<polygon id="XMLID_13_" class="track6" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/6,5.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="4,3"transform="rotate(150.000000,306,396)">
-				<polygon id="XMLID_14_" class="track4" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/4,3.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="8,3"transform="rotate(112.500000,306,396)">
+				<polygon id="XMLID_14_" class="track8" points="306,396,627,396,621,333"/>
+				<text transform="matrix(1 0 0 1 485.7502 382.8908)" class="st0 st4 st5">SOS</text>				</image>
+			</g>
+
+			<g id="4,6"transform="rotate(123.750000,306,396)">
+				<polygon id="XMLID_15_" class="track4" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/4,6.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="6,3"transform="rotate(165.000000,306,396)">
-				<polygon id="XMLID_15_" class="track6" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/6,3.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="5,2"transform="rotate(135.000000,306,396)">
+				<polygon id="XMLID_16_" class="track5" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/5,2.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="3,3"transform="rotate(180.000000,306,396)">
-				<polygon id="XMLID_16_" class="track3" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,3.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="3,5"transform="rotate(146.250000,306,396)">
+				<polygon id="XMLID_17_" class="track3" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,5.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="7,3"transform="rotate(195.000000,306,396)">
-				<polygon id="XMLID_17_" class="track7" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/7,3.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="6,6"transform="rotate(157.500000,306,396)">
+				<polygon id="XMLID_18_" class="track6" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/6,6.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="7,1"transform="rotate(210.000000,306,396)">
-				<polygon id="XMLID_18_" class="track7" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/7,1.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="3,4"transform="rotate(168.750000,306,396)">
+				<polygon id="XMLID_19_" class="track3" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,4.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="6,6"transform="rotate(225.000000,306,396)">
-				<polygon id="XMLID_19_" class="track6" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/6,6.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="7,4"transform="rotate(180.000000,306,396)">
+				<polygon id="XMLID_20_" class="track7" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/7,4.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="4,6"transform="rotate(240.000000,306,396)">
-				<polygon id="XMLID_20_" class="track4" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/4,6.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="4,5"transform="rotate(191.250000,306,396)">
+				<polygon id="XMLID_21_" class="track4" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/4,5.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="7,4"transform="rotate(255.000000,306,396)">
-				<polygon id="XMLID_21_" class="track7" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/7,4.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="5,1"transform="rotate(202.500000,306,396)">
+				<polygon id="XMLID_22_" class="track5" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/5,1.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="4,1"transform="rotate(270.000000,306,396)">
-				<polygon id="XMLID_22_" class="track4" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/4,1.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="7,2"transform="rotate(213.750000,306,396)">
+				<polygon id="XMLID_23_" class="track7" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/7,2.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="5,6"transform="rotate(285.000000,306,396)">
-				<polygon id="XMLID_23_" class="track5" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/5,6.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="6,2"transform="rotate(225.000000,306,396)">
+				<polygon id="XMLID_24_" class="track6" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/6,2.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="6,5"transform="rotate(300.000000,306,396)">
-				<polygon id="XMLID_24_" class="track6" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/6,5.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="5,4"transform="rotate(236.250000,306,396)">
+				<polygon id="XMLID_25_" class="track5" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/5,4.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="3,1"transform="rotate(315.000000,306,396)">
-				<polygon id="XMLID_25_" class="track3" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,1.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="3,6"transform="rotate(247.500000,306,396)">
+				<polygon id="XMLID_26_" class="track3" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,6.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="7,6"transform="rotate(330.000000,306,396)">
-				<polygon id="XMLID_26_" class="track7" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/7,6.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="3,2"transform="rotate(258.750000,306,396)">
+				<polygon id="XMLID_27_" class="track3" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,2.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="3,5"transform="rotate(345.000000,306,396)">
-				<polygon id="XMLID_27_" class="track3" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/3,5.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="7,3"transform="rotate(270.000000,306,396)">
+				<polygon id="XMLID_28_" class="track7" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/7,3.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
 			</g>
 
-			<g id="7,5"transform="rotate(360.000000,306,396)">
-				<polygon id="XMLID_28_" class="track7" points="306,396,627,396,616,313"/>
-				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/7,5.png" transform="matrix(1 0 0 1 483 356)">
+			<g id="8,1"transform="rotate(281.250000,306,396)">
+				<polygon id="XMLID_29_" class="track8" points="306,396,627,396,621,333"/>
+				<text transform="matrix(1 0 0 1 485.7502 382.8908)" class="st0 st4 st5">FIRE</text>				</image>
+			</g>
+
+			<g id="6,3"transform="rotate(292.500000,306,396)">
+				<polygon id="XMLID_30_" class="track6" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/6,3.png" transform="matrix(1 0 0 1 484 362)">
 				</image>
+			</g>
+
+			<g id="4,1"transform="rotate(303.750000,306,396)">
+				<polygon id="XMLID_31_" class="track4" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/4,1.png" transform="matrix(1 0 0 1 484 362)">
+				</image>
+			</g>
+
+			<g id="7,5"transform="rotate(315.000000,306,396)">
+				<polygon id="XMLID_32_" class="track7" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/7,5.png" transform="matrix(1 0 0 1 484 362)">
+				</image>
+			</g>
+
+			<g id="6,4"transform="rotate(326.250000,306,396)">
+				<polygon id="XMLID_33_" class="track6" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/6,4.png" transform="matrix(1 0 0 1 484 362)">
+				</image>
+			</g>
+
+			<g id="4,2"transform="rotate(337.500000,306,396)">
+				<polygon id="XMLID_34_" class="track4" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/4,2.png" transform="matrix(1 0 0 1 484 362)">
+				</image>
+			</g>
+
+			<g id="7,1"transform="rotate(348.750000,306,396)">
+				<polygon id="XMLID_35_" class="track7" points="306,396,627,396,621,333"/>
+				<image style="overflow:visible;" width="30" height="30" xlink:href="../img/gags/7,1.png" transform="matrix(1 0 0 1 484 362)">
+				</image>
+			</g>
+
+			<g id="8,2"transform="rotate(360.000000,306,396)">
+				<polygon id="XMLID_36_" class="track8" points="306,396,627,396,621,333"/>
+				<text transform="matrix(1 0 0 1 485.7502 382.8908)" class="st0 st4 st5">PASS</text>				</image>
 			</g>
 
             <image style="overflow:visible;enable-background:new    ;" width="471" height="471" xlink:href="../img/CoachZ.png"  transform="matrix(0.2123 0 0 0.2123 256 347.161)">
