--- a/bin/roulette/closer.html
+++ b/bin/roulette/closer.html
@@ -1,8 +1,7 @@
-            <image style="overflow:visible;enable-background:new    ;" width="471" height="471" xlink:href="../img/CoachZ.png"  transform="matrix(0.2123 0 0 0.2123 256 347.161)">
+            <image id="COACH_Z" style="overflow:visible;enable-background:new    ;" width="471" height="471" xlink:href="../img/CoachZ.png"  transform="matrix(0.2123 0 0 0.2123 256 347.161)">
             </image>
         </g>
-        <circle id="XMLID_1_" class="st1" cx="306" cy="396" r="228"/>
-		<image style="overflow:visible;" width="143" height="95" xlink:href="../img/arrow.png"  transform="matrix(0.6224 0 0 0.6224 525 365.4371)">
+		<image id="ARROW" style="overflow:visible;" width="143" height="95" xlink:href="../img/arrow.png"  transform="matrix(0.6224 0 0 0.6224 525 365.4371)">
 		</image>
         <script src="wheel.js" type="text/javascript"></script> 
         </svg>
